add angular part for user interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,13 @@ yarn-error.log
 # rollup-test output
 /modules/rollup-test/dist/
 
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+package-lock.json
+
