--- a/exchange-ui/package.json
+++ b/exchange-ui/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.6.8",
     "@angular/animations": "^6.0.4",
     "@angular/common": "^6.0.4",
     "@angular/compiler": "^6.0.4",
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "^6.0.4",
     "@angular/platform-browser-dynamic": "^6.0.4",
     "@angular/router": "^6.0.4",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "rxjs": "^6.2.0",
     "zone.js": "^0.8.14"
