--- a/exchange/pom.xml
+++ b/exchange/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>exchange</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
