--- a/exchange/src/main/resources/application.properties
+++ b/exchange/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect 
+hibernate.dialect=com.cryptos.exchange.model.SQLiteDialect
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:sqlite:cryptos.db
 spring.datasource.username=
